# dawn

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  DEPS  OWNERS  PRESUBMIT.py  unsafe_buffers_paths.txt
build_overrides/: dawn.gni  partition_alloc.gni
docs/dawn/: asserts-vs-check.md
docs/tint/: coverage-info.md
generator/: dawn_json_generator.py
generator/templates/: api_cpp.h  dawn_proc.cpp  dawn_thread_dispatch_proc.cpp  mock_api.cpp  mock_api.h
include/dawn/native/: DawnNative.h
include/dawn/platform/: DawnPlatform.h
include/dawn/replay/: Replay.h
include/dawn/wire/: WireClient.h  WireServer.h
infra/config/global/: PACKAGE.star  binaries.star  bundles.star  cmake_shared.star  cmake_try.star  gn_standalone_ci.star  gn_standalone_try.star  legacy_builders.star  location_filters.star  main.star  milestones.json  mixins.star  tests.star
infra/specs/: ci.json  mixins.pyl  waterfalls.pyl
scripts/: dawn_overrides_with_defaults.gni  roll_chromium_deps.py  tint_overrides_with_defaults.gni
src/dawn/: BUILD.gn  CMakeLists.txt  dawn.json
src/dawn/common/: Algebra.h  AlignedAlloc.cpp  BUILD.gn  CMakeLists.txt  ColorSpace.h  Enumerator.h  ExternalTextureParams.cpp  GPUInfo.cpp  Mutex.h  MutexProtected.h  Numeric.h  Sha3.cpp  SystemUtils.cpp  SystemUtils.h  UnderlyingType.h  WGPUDeviceCallbackInfos.cpp  WeakRef.h  ityp_array.h  ityp_bitset.h  ityp_span.h  ityp_stack_vec.h  ityp_vector.h
src/dawn/native/: Adapter.cpp  ApplyClearColorValueWithDrawHelper.cpp  ApplyClearColorValueWithDrawHelper.h  AsyncTask.cpp  AsyncTask.h  AttachmentState.cpp  BUILD.gn  BindGroup.cpp  BindGroup.h  BindGroupLayoutInternal.cpp  BindGroupLayoutInternal.h  BindGroupTracker.h  BindingInfo.cpp  BindingInfo.h  BlitBufferToDepthStencil.cpp  BlitBufferToTexture.cpp  BlitColorToColorWithDraw.cpp  BlitDepthToDepth.cpp  BlitTextureToBuffer.cpp  Blob.cpp  Blob.h  BlobCache.cpp  BlobCache.h  BuddyAllocator.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandAllocator.cpp  CommandAllocator.h  CommandBuffer.cpp  CommandBuffer.h  CommandBufferStateTracker.cpp  CommandEncoder.cpp  CommandEncoder.h  CommandValidation.cpp  CommandValidation.h  Commands.cpp  Commands.h  CompilationMessages.cpp  (+72 more)
src/dawn/tests/: BUILD.gn  CMakeLists.txt  DawnTest.cpp  DawnTest.h  PartitionAllocSupport.cpp  ToggleParser.cpp
src/dawn/tests/end2end/: AdapterEnumerationTests.cpp  ArchTierLimitsExhaustive.cpp  BasicTests.cpp  BindGroupTests.cpp  BufferHostMappedPointerTests.cpp  BufferTests.cpp  BufferViewTests.cpp  BufferZeroInitTests.cpp  CaptureAndReplayTests.cpp  CommandEncoderTests.cpp  CompressedTextureFormatTests.cpp  ComputeLayoutMemoryBufferTests.cpp  ComputeStorageBufferBarrierTests.cpp  CopyTests.cpp  DepthStencilCopyTests.cpp  DepthStencilSamplingTests.cpp  DepthStencilStateTests.cpp  DestroyTests.cpp  DeviceLifetimeTests.cpp  DeviceLostTests.cpp  DrawIndexedIndirectTests.cpp  DynamicBufferOffsetTests.cpp  EventTests.cpp  ExternalTextureTests.cpp  FramebufferFetchTests.cpp  ImmediateDataTests.cpp  InfiniteLoopTests.cpp  MemoryHeapPropertiesTests.cpp  MultiDrawIndexedIndirectTests.cpp  MultisampledInterpolationTests.cpp  MultisampledRenderingTests.cpp  MultithreadTests.cpp  NonzeroBufferCreationTests.cpp  NonzeroTextureCreationTests.cpp  PrimitiveTopologyTests.cpp  QueryTests.cpp  QueueTests.cpp  QueueTimelineTests.cpp  RenderBundleTests.cpp  RenderPassLoadOpTests.cpp  (+16 more)
src/dawn/tests/mocks/platform/: CachingInterfaceMock.cpp
src/dawn/tests/perf_tests/: BufferUploadPerf.cpp  DawnPerfTest.cpp  DawnPerfTest.h  DawnPerfTestPlatform.cpp  DrawCallPerf.cpp  LoadStoreOpPerfTest.cpp  UniformBufferUpdatePerf.cpp
src/dawn/tests/unittests/: AlgebraTests.cpp  CommandAllocatorTests.cpp  EnumMaskIteratorTests.cpp  EnumeratorTests.cpp  FeatureTests.cpp  ITypArrayTests.cpp  ITypBitsetTests.cpp  ITypSpanTests.cpp  ITypStackVecTests.cpp  ITypVectorTests.cpp  LinkedListTests.cpp  MathTests.cpp  MutexProtectedTests.cpp  NumericTests.cpp  Sha3Tests.cpp  SystemUtilsTests.cpp  ToggleTests.cpp
src/dawn/tests/unittests/native/: AllowedErrorTests.cpp  BlobTests.cpp  BufferBaseTests.cpp  CacheRequestTests.cpp  CommandBufferEncodingTests.cpp  CreatePipelineAsyncEventTests.cpp  DestroyObjectTests.cpp  DeviceAsyncTaskTests.cpp  DeviceCreationTests.cpp  ImmediateConstantsTrackerTests.cpp  SkipValidationTests.cpp  StreamTests.cpp
src/dawn/tests/unittests/native/mocks/: BufferMock.cpp  BufferMock.h
src/dawn/tests/unittests/replay/: CaptureWalkerTests.cpp
src/dawn/tests/unittests/validation/: BindGroupValidationTests.cpp  BufferValidationTests.cpp  CompatValidationTests.cpp  ErrorScopeValidationTests.cpp  MinimumBufferSizeValidationTests.cpp  QueryValidationTests.cpp  ResourceTableValidationTests.cpp  ShaderModuleValidationTests.cpp  ToggleValidationTests.cpp  UnsafeAPIValidationTests.cpp  ValidationTest.cpp  WGSLFeatureValidationTests.cpp  YCbCrInfoValidationTests.cpp  YCbCrValidationTests.cpp
src/dawn/tests/unittests/wire/: WireAdapterTests.cpp  WireArgumentTests.cpp  WireDisconnectTests.cpp  WireErrorCallbackTests.cpp  WireExtensionTests.cpp  WireInjectBufferTests.cpp  WireInjectInstanceTests.cpp  WireInjectSurfaceTests.cpp  WireInstanceTests.cpp  WireMemoryTransferServiceTests.cpp  WireQueueTests.cpp  WireShaderModuleTests.cpp  WireTest.cpp
src/dawn/tests/white_box/: D3D11BufferTests.cpp  D3D11MultithreadTests.cpp  D3D12DescriptorHeapTests.cpp  EGLImageWrappingTests.cpp  GLTextureWrappingTests.cpp  GPUTimestampCalibrationTests.cpp  QueryInternalShaderTests.cpp  SharedBufferMemoryTests.cpp  SharedBufferMemoryTests_win.cpp  SharedTextureMemoryTests.cpp  SharedTextureMemoryTests_android.cpp  SharedTextureMemoryTests_apple.mm  SharedTextureMemoryTests_dmabuf.cpp  SharedTextureMemoryTests_opaquefd.cpp  SharedTextureMemoryTests_win.cpp  SharedTextureMemoryYCbCrAndroidTests.cpp  VulkanImageWrappingTests.cpp  WaitListEventTests.cpp
src/tint/: BUILD.gn  CMakeLists.txt
test/tint/: fuzzing_coverage_test.wgsl
tools/: fetch_dawn_dependencies.py  setup-build
webgpu-cts/: compat-expectations.txt  expectations.txt
(+1352 files in other folders)
